# certprep

./: .gitignore
backend/: .env.example  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: cli.py  config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  contact.py  content.py  deps.py  learning_paths.py  mock_exam.py  onboarding.py  payments.py  progress.py  study.py  tutor.py
backend/app/models/: __init__.py  analytics.py  base.py  engagement.py  exam.py  llm_usage.py  progress.py  tutor.py  user.py
backend/app/schemas/: content.py  study.py
backend/app/services/ai/: coach_agent.py  embeddings.py  explainer.py  llm_provider.py  retrieval.py  usage.py
backend/app/services/analytics/: readiness.py
backend/app/services/content/: seed.py
backend/app/services/email/: __init__.py
backend/app/services/engagement/: session_composer.py  spaced_rep.py  streaks.py
backend/app/services/mastery/: bkt.py  decay.py  propagation.py
backend/app/services/selection/: bandit.py  diagnostic.py  scoring.py
backend/data/: roadmaps.json
backend/data/seed/: _generate_redhat.py  learning-paths.json
backend/data/seed/aws-aif/: concepts.json  exam.json  exam_info.json  questions.json
backend/data/seed/aws-aip/: concepts.json  exam.json  exam_info.json  questions.json
backend/data/seed/aws-ans/: concepts.json  exam.json  exam_info.json  questions.json
backend/data/seed/aws-clf/: concepts.json  (+3 more)
backend/scripts/: generate_exam_info.py  generate_ollama.py
backend/tests/: test_bkt.py  test_readiness.py  test_spaced_rep.py
(+411 files in other folders)
